MDEV-9656 Assertion `0' failed in Item_sum_field::get_tmp_table_field(). Removing a wrong ASSERT. Item_sum_field now uses the inherited Item::get_tmp_table_field().